--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_gcpmanagedmachinepools.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_gcpmanagedmachinepools.yaml
@@ -20,8 +20,11 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.mode
-      name: Mode
+    - jsonPath: .status.ready
+      name: Ready
+      type: string
+    - jsonPath: .status.replicas
+      name: Replicas
       type: string
     name: v1beta1
     schema:
@@ -51,6 +54,21 @@ spec:
                   GCP resources managed by the GCP provider, in addition to the ones
                   added by default.
                 type: object
+              diskSizeGb:
+                description: DiskSizeGb is the size of the disk attached to each node,
+                  specified in GB. The smallest allowed disk size is 10GB. If unspecified,
+                  the default disk size is 100GB.
+                format: int32
+                type: integer
+              diskType:
+                description: DiskType is the of the disk attached to each node
+                type: string
+              imageType:
+                description: ImageType is the type of image to use for this node.
+                  Note that for a given image type, the latest version of it will
+                  be used. Please see https://cloud.google.com/kubernetes-engine/docs/concepts/node-images
+                  for available image types.
+                type: string
               kubernetesLabels:
                 additionalProperties:
                   type: string
@@ -82,6 +100,44 @@ spec:
                   - value
                   type: object
                 type: array
+              localSsdCount:
+                description: LocalSsdCount is the number of local SSD disks to be
+                  attached to the node.
+                format: int32
+                type: integer
+              machineType:
+                description: MachineType is the name of a Google Compute Engine [machine
+                  type](https://cloud.google.com/compute/docs/machine-types). If unspecified,
+                  the default machine type is `e2-medium`.
+                type: string
+              management:
+                properties:
+                  autoRepair:
+                    description: AutoRepair specifies whether the node auto-repair
+                      is enabled for the node pool. If enabled, the nodes in this
+                      node pool will be monitored and, if they fail health checks
+                      too many times, an automatic repair action will be triggered.
+                    type: boolean
+                  autoUpgrade:
+                    description: AutoUpgrade specifies whether node auto-upgrade is
+                      enabled for the node pool. If enabled, node auto-upgrade helps
+                      keep the nodes in your node pool up to date with the latest
+                      release version of Kubernetes.
+                    type: boolean
+                type: object
+              maxPodsConstraint:
+                description: MaxPodsConstraint is the maximum number of pods that
+                  can be run simultaneously on a node in the node pool.
+                format: int64
+                type: integer
+              networkTags:
+                description: The list of instance tags applied to all nodes. Tags
+                  are used to identify valid sources or targets for network firewalls
+                  and are specified by the client during cluster or node pool creation.
+                  Each tag within the list must comply with RFC1035.
+                items:
+                  type: string
+                type: array
               nodePoolName:
                 description: NodePoolName specifies the name of the GKE node pool
                   corresponding to this MachinePool. If you don't specify a name then
@@ -98,13 +154,33 @@ spec:
               scaling:
                 description: Scaling specifies scaling for the node pool
                 properties:
+                  enableAutoscaling:
+                    description: Is autoscaling enabled for this node pool. If unspecified,
+                      the default value is true.
+                    type: boolean
+                  locationPolicy:
+                    description: Location policy used when scaling up a nodepool.
+                    enum:
+                    - balanced
+                    - any
+                    type: string
                   maxCount:
+                    description: MaxCount specifies the maximum number of nodes in
+                      the node pool
                     format: int32
                     type: integer
                   minCount:
+                    description: MinCount specifies the minimum number of nodes in
+                      the node pool
                     format: int32
                     type: integer
                 type: object
+              serviceAccount:
+                description: ServiceAccount is the Google Cloud Platform Service Account
+                  to be used by the node VMs. Specify the email address of the Service
+                  Account; otherwise, if no Service Account is specified, the "default"
+                  service account is used.
+                type: string
             type: object
           status:
             description: GCPManagedMachinePoolStatus defines the observed state of
@@ -157,6 +233,9 @@ spec:
                   type: object
                 type: array
               ready:
+                default: false
+                description: Ready denotes that the GCPManagedMachinePool has joined
+                  the cluster
                 type: boolean
               replicas:
                 description: Replicas is the most recently observed number of replicas.
